apps/k8s/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: milestone2-kb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
              name: apache
          volumeMounts:
            - name: index-volume
              mountPath: /usr/local/apache2/htdocs/index.html
              subPath: index.html
      volumes:
        - name: index-volume
          configMap:
            name: index-map
            items:
              - key: index.html
                path: index.html
