apps/k8s/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: milestone2-kb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: apache
      name: apache
  selector:
    app: apache
